--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BAB</title>
 
 
@@ -181,6 +182,8 @@
       <p class="end">Thank you!</p>
     </div>
   </section>
+
+
 </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.6.6/jquery.fullPage.min.js'></script>
