--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco lunt mollit anim id est laborum.</p>
       </div>
 
-    </div>
+    </div> 
 
 
 
@@ -184,7 +184,16 @@
 
 </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.6.6/jquery.fullPage.min.js'></script>
+<!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.6.6/jquery.fullPage.min.js'></script> -->
+
+
+<script>
+if (screen && screen.width > 768) {
+document.write('<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.6.6/jquery.fullPage.min.js"><\/script>');
+}
+</script>
+
+
 
     <script src="js/index.js"></script>
 
