--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </a>
 
     <ul class="toggle-horisontal-menu">
-      <li><a href="#">Architektura</a></li>
+      <li><a href="#fifthSection">Architektura</a></li>
       <li><a href="#">Budownictwto</a></li>
       <li><a href="#">O firmie</a></li>
       <li><a href="#">Praca</a></li>
@@ -88,12 +88,14 @@
         <img src="img/icon.jpg" alt="" >
         <h2>blablabla IPSUM</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco lunt mollit anim id est laborum.</p>
+        <a href="#"> czytaj więcej </a>
       </div>
 
       <div class="portfolio one">
         <img src="img/icon.jpg" alt="" >
         <h2>blablabla IPSUM</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco lunt mollit anim id est laborum.</p>
+        <a href="#"> czytaj więcej </a>
       </div>
 
 
@@ -101,6 +103,7 @@
         <img src="img/icon.jpg" alt="">
         <h2>blablabla IPSUM</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco lunt mollit anim id est laborum.</p>
+        <a href="#"> czytaj więcej </a>
       </div>
 
 
@@ -108,6 +111,7 @@
         <img src="img/icon.jpg" alt="" >
         <h2>blablabla IPSUM</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco lunt mollit anim id est laborum.</p>
+        <a href="#"> czytaj więcej </a>
       </div>
 
 
@@ -115,6 +119,7 @@
         <img src="img/icon.jpg" alt="">
         <h2>blablabla IPSUM</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco lunt mollit anim id est laborum.</p>
+        <a href="#"> czytaj więcej </a>
       </div>
 
 
@@ -122,6 +127,7 @@
         <img src="img/icon.jpg" alt="" >
         <h2>blablabla IPSUM</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco lunt mollit anim id est laborum.</p>
+        <a href="#"> czytaj więcej </a>
       </div>
 
     </div>
